--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,9 @@
       "es2018",
       "dom"
     ],
+    "types": [
+      "node"
+    ],
     "paths": {
       "ace-module": [
         "dist/ace-module"
