--- a/projects/ace-module/tsconfig.lib.json
+++ b/projects/ace-module/tsconfig.lib.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
     "target": "es2015",
+    "moduleResolution": "node",
     "declaration": true,
     "inlineSources": true,
     "types": [
